[project]
name = "flickr-download"
version = "0.3.8"
description = "Download photos from Flickr"
authors = [{ name = "Allan Beaufour", email = "allan@beaufour.dk" }]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10,<4.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "flickr-api>=0.7.7,<0.8",
    "python-dateutil>=2.8.1,<3",
    "PyYAML>=5.3,<7.0",
    "pathvalidate>=2.5.2,<4.0.0",
    "interrogate>=1.5.0,<2",
    "usingversion>=0.1.2,<0.2",
    "setuptools>=75.1,<81.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2,<9.0",
    "ruff>=0.9",
    "pre-commit>=2.20,<5.0",
    "mypy>=1.0",
    "types-PyYAML",
    "types-python-dateutil",
]
extras = [
    "coverage>=6.5,<8.0",
    "python-coveralls>=2.9.3,<3",
]

[project.scripts]
flickr_download = "flickr_download.flick_download:main"

[project.urls]
Repository = "https://github.com/beaufour/flickr-download"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.2,<9.0",
    "ruff>=0.9",
    "pre-commit>=2.20,<5.0",
    "mypy>=1.0",
    "types-PyYAML",
    "types-python-dateutil",
    "coverage>=6.5,<8.0",
    "python-coveralls>=2.9.3,<3",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
extend-ignore = ["E203"]

[tool.ruff.format]
# Use double quotes like Black
quote-style = "double"

[tool.interrogate]
exclude = ["tests"]
