[project]
name = "flickr-download"
version = "0.3.8"
description = "Download photos from Flickr"
authors = [{ name = "Allan Beaufour", email = "allan@beaufour.dk" }]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10,<4.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "flickr-api>=0.8.0",
    "python-dateutil>=2.8.1",
    "PyYAML>=5.3",
    "pathvalidate>=2.5.2",
    "usingversion>=0.1.2",
    "setuptools>=75.1",
]

[project.scripts]
flickr_download = "flickr_download.flick_download:main"

[project.urls]
Repository = "https://github.com/beaufour/flickr-download"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.2",
    "ruff>=0.9",
    "pre-commit>=2.20",
    "mypy>=1.0",
    "types-PyYAML",
    "types-python-dateutil",
    "types-requests",
    "coverage>=6.5",
    "python-coveralls>=2.9.3",
    "interrogate>=1.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
extend-ignore = ["E203"]

[tool.ruff.format]
# Use double quotes like Black
quote-style = "double"

[tool.interrogate]
exclude = ["tests"]

[tool.mypy]
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
ignore_missing_imports = true
